--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -2,26 +2,72 @@
    Main Header
 ----------------------------------------------------------------*/
 .main-header {
+	background-color: #e9e9e9;
 	// .main-header__aside
-	&__aside {}
+	&__aside {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 999;
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 80px;
+		height: 1050px;
+		max-height: 100vh;
+		padding: 30px 0;
+
+		background-color: #b11217;
+	}
 	// .main-header__video
-	&__video {}
+	&__video {
+		margin-bottom: 20px;
+	}
 	// .main-header__photo
-	&__photo {}
+	&__photo {
+		margin-bottom: 20px;
+	}
 	// .main-header__logo
 	&__logo {}
 	// .main-header__middle
-	&__middle {}
+	&__middle {
+		margin: 0 270px 0 80px;
+		padding: 0 30px;
+	}
 	// .main-header__row
-	&__row {}
+	&__row {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 30px 0;
+		&--top {
+			justify-content: space-between;
+			min-height: 80px;
+			padding: 10px 0;
+		}
+		&--bottom {
+			min-height: 280px;
+		}
+	}
 	// .main-header__exchange
-	&__exchange {}
+	&__exchange {
+		margin: 0;
+	}
+	// .main-header__euro
+	&__euro {}
+	// .main-header__dollar
+	&__dollar {}
 	// .main-header__social
 	&__social {}
 	// .main-header__counselor
 	&__counselor {}
 	// .main-header__col
-	&__col {}
+	&__col {
+		&:nth-child(2) {
+			padding: 0 130px;
+		}
+	}
 	// .main-header__date
 	&__date {}
 	// .main-header__weather
@@ -44,41 +90,46 @@
 	// .main-header__nav
 	&__nav {}
 }
+
 .video-icon {
+	fill: #fff;
 }
+
 .photo-icon {
+	fill: #fff;
+
 }
+
+
+
+/*----------------------------------------------------------------
+	Logo
+----------------------------------------------------------------*/
 .logo {
+	display: none;
 	// .logo--main
-	&--main {}
+	&--main {
+	}
 }
-.seach {
+
+
+
+/*----------------------------------------------------------------
+	Seach
+----------------------------------------------------------------*/
+.search {
+	display: inline-block;
+	margin-top: auto;
+
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
 	// .seach__icon
-	&__icon {}
-}
-.burger {
-}
-.container {
-}
-.dollar {
-}
-.euro {
-}
-.social {
-	// .social__item
-	&__item {}
-	// .social__link
-	&__link {}
-	// .social__icon
-	&__icon {}
-}
-.main-nav {
-	// .main-nav__list
-	&__list {}
-	// .main-nav__row
-	&__row {}
-	// .main-nav__link
-	&__link {}
+	&__icon {
+		width: 18px;
+		height: 18px;
+		fill: #f4dedf;
+	}
 }
 
 
