--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -20,44 +20,50 @@
 
 		background-color: #b11217;
 		@media(max-width: 1535px) {
+			width: 60px
+		}
+		@media(max-width: 1240px) {
+			position: static;
 			flex-direction: row;
-
-			height: 80px;
 			width: 100%;
+			height: 80px;
 			padding: 0 30px;
 		}
+		@media(max-width: 767px) {
+			height: 60px;
+			padding: 0 15px;
+		}
 	}
-	&__video,
-	&__photo {
-		margin-bottom: 20px;
-		transition: transform .1s linear;
-		&:focus {
-			outline: 2px solid #fff;
-			outline-offset: 3px;
-			
-		}
-		&:hover {
-			transform: scale(1.1);
-		}
-		@media(max-width: 1535px) {
-			margin: 0 20px 0 0;
-			&:last-child {
-				margin: 0;
+	// .main-header__media
+	&__media {
+		@media(max-width: 1240px) {
+			flex-direction: row;
+			.media-list__item {
+				margin: 0 20px 0 0;
+				&:last-child {
+					margin: 0;
+				}
 			}
 		}
 	}
-	// .main-header__video
-	&__video {}
-	// .main-header__photo
-	&__photo {
-	}
 	// .main-header__logo
 	&__logo {
-		margin-bottom: 20px;
+		@media(max-width: 1240px) {
+			display: inline-block;
+			margin: -10px auto 0;
+		}
+		@media(max-width: 767px) {
+			font-size: 32px;
+			margin: 0 auto;
+		}
 	}
 	// .main-header__middle
 	&__middle {
 		padding: 0 30px;
+		@media(max-width: 1050px) {
+			display: none;			
+		}
+		
 	}
 	// .main-header__row
 	&__row {
@@ -67,11 +73,22 @@
 			justify-content: space-between;
 			min-height: 80px;
 			padding: 10px 0;
+			@media(max-width: 1240px) {
+				display: none;
+			}
 		}
 		&--bottom {
 			justify-content: center;
 			min-height: 265px;
 			padding-bottom: 75px;
+			@media(max-width: 1535px) {
+				min-height: 210px;
+				padding-bottom: 50px;
+			}
+			@media(max-width: 1240px) {
+				min-height: 190px;
+				padding-bottom: 25px;
+			}
 		}
 	}
 	// .main-header__exchange
@@ -108,7 +125,7 @@
 	}
 	// .main-header__social
 	&__social {
-		margin-right: -20px;
+		margin-left: -45px;
 	}
 	// .main-header__counselor
 	&__counselor {
@@ -147,12 +164,16 @@
 	&__col {
 		flex: 0 0 33.333%;
 		&:first-child {
-			padding-left: 45px;
+			@media(min-width: 1650px) {
+				padding-left: 45px;
+			}
 		}
 		&:last-child {
-			padding-right: 45px;
 			.main-header__article {
 				margin-left: auto;
+			}
+			@media(min-width: 1650px) {
+				padding-right: 45px;
 			}
 		}
 		&:nth-child(2) {
@@ -161,6 +182,11 @@
 			font-size: 16px;
 			text-align: center;
 		}
+	}
+	// .main-header__inner 
+	&__inner {
+		position: relative;
+		left: -35px;
 	}
 	// .main-header__date
 	&__date {
@@ -241,15 +267,80 @@
 
 		background: url('../img/header/clock.svg') left center no-repeat;
 	}
+	// .main-header__rubrics
+	&__rubrics {
+		@media(max-width: 1535px) {
+			display: none;
+		}
+	}
+	// .main-header__search
+	&__search {
+		display: inline-block;
+		margin-top: auto;
+
+		border: none;
+		background-color: transparent;
+		cursor: pointer;
+		transition: transform .1s linear;
+		&:focus {
+			outline: 2px solid #fff;
+			outline-offset: 3px;
+		}
+		&:hover {
+			transform: scale(1.1);
+		}
+		
+		@media(max-width: 1240px) {
+			display: none;
+		}
+	}
+	// .main-header__icon
+	&__icon {
+		width: 18px;
+		height: 18px;
+		fill: #f4dedf;
+	}
 	// .main-header__nav
 	&__nav {}
 }
 
-.video-icon,
-.photo-icon {
-	fill: #fff;
-}
 
+/*----------------------------------------------------------------
+	Media links
+----------------------------------------------------------------*/
+.media-list {
+	display: flex;
+	flex-direction: column;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	// .media-list__item
+	&__item {
+		margin-bottom: 20px;
+		&:last-child {
+			margin: 0;
+		}
+	}
+	// .media-list__lk
+	&__lk {
+		display: block;
+		line-height: 0;
+		transition: transform .1s linear;
+		&:focus {
+			outline: 2px solid #fff;
+			outline-offset: 3px;
+			
+		}
+		&:hover {
+			transform: scale(1.1);
+		}
+		
+	}
+	// .media-list__icon
+	&__icon {
+		fill: #fff;
+	}
+}
 
 /*----------------------------------------------------------------
 	Logo
@@ -263,15 +354,10 @@
 	font-size: 56px;
 	letter-spacing: 1px;
 	text-transform: lowercase;
-	@media(max-width: 1535px) {
-		display: block;
-		margin: 0 auto;
-		visibility: hidden;
-	}
 	// .logo--main
 	&--main {
-		display: block;
-		visibility: visible !important;
+		display: inline-block;;
+		margin-bottom: 20px;
 
 		color: #000;
 		font-size: 70px;
@@ -279,37 +365,12 @@
 			outline: 2px solid rgb(216, 25, 18);
 			outline-offset: 2px;
 		}
-	}
-}
-
-
-
-/*----------------------------------------------------------------
-	Seach
-----------------------------------------------------------------*/
-.search {
-	display: inline-block;
-	margin-top: auto;
-
-	border: none;
-	background-color: transparent;
-	cursor: pointer;
-	transition: transform .1s linear;
-	@media(max-width: 1535px) {
-		margin: 0 20px 0 0;
-	}
-	&:focus {
-		outline: 2px solid #fff;
-		outline-offset: 3px;
-	}
-	&:hover {
-		transform: scale(1.1);
-	}
-	// .seach__icon
-	&__icon {
-		width: 18px;
-		height: 18px;
-		fill: #f4dedf;
+		@media(max-width: 1535px) {
+			font-size: 65px;
+		}
+		@media(max-width: 1240px) {
+			display: none;
+		}
 	}
 }
 
@@ -321,13 +382,15 @@
 	position: relative;
 
 	display: none;
-	width: 25px;
-	height: 16px;
+	width: 32px;
+	height: 20px;
+	padding: 0;
 
 	font-size: 0;
 	color: transparent;
 	cursor: pointer;
 	transition: all .3s ease;
+	border: none;
 	background-color: transparent;
 	&::before,
 	&:after {
@@ -336,46 +399,57 @@
 		left: 0;
 
 		width: 100%;
-		height: 1px;
+		height: 3px;
 
 		background-color: #fff;
 		transition: all .3s ease;
 	}
 	&::before {
 		top: -1px;
+		width: 26px;
 	}
 	&::after {
 		bottom: 0;
+		width: 20px;
 	}
 	span {
 		position: absolute;
 		top: 50%;
 		left: 0;
 		width: 100%;
-		height: 1px;
-		margin-top: -1px;
+		height: 3px;
+		margin-top: -2px;
 
 		background-color: #fff;
+		&::after {
+			content: '';
+			position: absolute;
+			top: -15px;
+			left: -5px;
+			width: 35px;
+			height: 35px;
+			background-color: transparent;
+		}
 	}
-	@media(max-width: 1535px) {
+	@media(max-width: 1240px) {
 		display: block;
 	}
 }
 
 .burger.active {
 	span {
-		transform: scale(0);
+		background-color: transparent;
     }
     &::before,
 	&:after {
-        width: 70%;
+        width: 26px;
     }
 	&::before {
-		transform: rotate(45deg);
-		top: 7px
+		transform:  translate(0, -50%) rotate(45deg);
+		top: 10px
 	}
 	&::after {
-		transform: rotate(-45deg);
-		bottom: 8px;
+		transform:  translate(0, 50%) rotate(-45deg);
+		bottom: 10px;
 	}
 }
