--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -25,12 +25,12 @@
 		@media(max-width: 1240px) {
 			position: static;
 			flex-direction: row;
+			justify-content: space-between;
 			width: 100%;
 			height: 80px;
 			padding: 0 30px;
 		}
 		@media(max-width: 767px) {
-			height: 60px;
 			padding: 0 15px;
 		}
 	}
@@ -50,11 +50,9 @@
 	&__logo {
 		@media(max-width: 1240px) {
 			display: inline-block;
-			margin: -10px auto 0;
 		}
-		@media(max-width: 767px) {
-			font-size: 32px;
-			margin: 0 auto;
+		@media(max-width: 420px) {
+			font-size: 35px;
 		}
 	}
 	// .main-header__middle
@@ -63,7 +61,6 @@
 		@media(max-width: 1050px) {
 			display: none;			
 		}
-		
 	}
 	// .main-header__row
 	&__row {
@@ -304,8 +301,6 @@
 	}
 	// .main-header__icon
 	&__icon {
-		width: 18px;
-		height: 18px;
 		fill: #f4dedf;
 	}
 	// .main-header__nav
@@ -359,7 +354,7 @@
 	color: #fff;
 	font-family: Hoefler, serif;
 	font-weight: 400;
-	font-size: 56px;
+	font-size: 45px;
 	letter-spacing: 1px;
 	text-transform: lowercase;
 	// .logo--main
@@ -372,9 +367,6 @@
 		&:focus {
 			outline: 2px solid rgb(216, 25, 18);
 			outline-offset: 2px;
-		}
-		@media(max-width: 1535px) {
-			font-size: 65px;
 		}
 		@media(max-width: 1240px) {
 			display: none;
