--- a/#src/scss/search.scss
+++ b/#src/scss/search.scss
@@ -18,8 +18,11 @@
         &::placeholder {
             color: #fff;
             font-family: inherit;
-            font-size: 18px;
-            font-weight: 400;
+            font-size: 28px;
+            font-weight: 300;
+            @media(max-width: 420px) {
+                font-size: 24px;
+            }
         }
         &:focus::placeholder {
             color: transparent;
@@ -28,8 +31,8 @@
     // .search__btn
     &__btn {
         position: absolute;
-        top: 0;
         right: 0;
+        bottom: 15px;
         margin: 0;
         padding: 0;
         
