--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -19,6 +19,7 @@
 		padding: 30px 0;
 
 		background-color: #b11217;
+		transition: top .2s ease-out;
 		@media(max-width: 1535px) {
 			width: 60px
 		}
