--- a/#src/scss/main-nav.scss
+++ b/#src/scss/main-nav.scss
@@ -98,6 +98,7 @@
         @media(max-width: 767px) {
            flex-direction: column;
            align-content: center;
+           margin-bottom: 100px;
         }
     }
     // .main-nav__links
