--- a/#src/scss/search.scss
+++ b/#src/scss/search.scss
@@ -14,6 +14,7 @@
         border: none;
         outline: none;
         background: transparent;
+        border-radius: 0 !important;
         border-bottom: 4px solid #fff;
         &::placeholder {
             color: #fff;
@@ -44,5 +45,9 @@
     // .search__icon
     &__icon {
         fill: #fff;
+        @media(max-width: 420px) {
+            width: 25px;
+            height: 25px;
+        }
     }
 }
