--- a/#src/scss/social.scss
+++ b/#src/scss/social.scss
@@ -12,12 +12,18 @@
 	&--nav {
 		.social__item {
 			margin-bottom: 20px;
+			@media(max-width: 420px) {
+				margin-right: 20px;
+				&:last-child {
+					margin-right: 0;
+		}
+			}
 		}
 		.social__icon {
             fill: #fff;
 			@media(max-width: 420px) {
-				width: 30px;
-				height: 30px;
+				width: 25px;
+				height: 25px;
 			}
         }
 		.social__link {
