--- a/#src/scss/edition.scss
+++ b/#src/scss/edition.scss
@@ -8,24 +8,35 @@
     &--footer {
         flex-direction: row;
         padding: 0 30px;
+        @media(max-width: 767px) {
+            padding: 0 15px;
+        }
         .edition__list {
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
             width: 100%;
-            padding: 25px 0 0;
+            padding: 25px 0;
+            @media(max-width: 1050px) {
+               padding: 15px 0;
+            }
         }
         .edition__row {
-            margin: 0 60px 25px 0;
+            margin: 0 60px 0 0;
             &:last-child {
-                margin-right: 0;
+                margin: 0;
+            }
+            @media(max-width: 1050px) {
+                margin-right: 30px;
             }
         }
         .edition__link {
             font-size: 16px;
             font-weight: 500;
+            line-height: 2.2;
+            transition: color .3s;
             &:hover {
-                text-decoration: underline;
+                color: darken(#fff, 25%);
             }
             &:focus {
                 outline: 2px solid #fff;
