--- a/#src/scss/modal.scss
+++ b/#src/scss/modal.scss
@@ -5,43 +5,75 @@
     position: fixed;
     top: 50%;
 	left: 50%;
-    z-index: 110;
+    z-index: 1001;
 
     display: none;
     max-height: 100vh;
+    &--search {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
 
-    background-color: #fdfeff;
-    border-radius: 3px;
-	transform: translate(-50%, -50%);
-    box-shadow: 0 5px 25px rgba(93, 93, 93, .76);
-    overflow-y: auto;
+        background-color: transparent;
+        // 
+        .modal__close{
+            top: 25px;
+            right: 25px;
+        }
+        // .modal__content
+        .modal__content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    // .modal__content
+    &__content {
+        height: 100%;
+        overflow-y: auto;
+    }
+    &__close {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+    
+        width: 15px;
+        height: 15px;
+        
+        border: none;
+        background: transparent url('../img/icons/close.svg') center / cover no-repeat;
+        cursor: pointer;
+        &:after {
+            content: '';
+            position: absolute;
+            top: -10px;
+            left: -10px;
+            right: -10px;
+            bottom: -10px;
+        }
+    }
+    &.show {
+        display: block;
+    }
 }
 
 .overlay {
-    position: fixed;
-    top: 0; 
-    left: 0;
-    z-index: 105;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
 
-    display: none;
-    width: 100vw;
-    height: 100vh;
+	display: none;
+	width: 100%; 
+	height: 100%;
 
-    background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(#000, .8);
+	transition: opacity .3s;
+	&.active {
+		display: block;
+	}
 }
 
-.modal-show {
-	display: block;
-}
-
-.modal__close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-
-    width: 15px;
-    height: 15px;
-
-    background: transparent url('../img/icons/close-dark.svg') center / cover no-repeat;
-    cursor: pointer;
-}
