--- a/#src/scss/rubrics.scss
+++ b/#src/scss/rubrics.scss
@@ -33,7 +33,7 @@
 		// .rubrics__list
 		.rubrics__list {
 			align-items: center;
-			padding-bottom: 0;
+			padding: 0;
 		}
 		// .rubrics__row
 		.rubrics__row {
