--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -4,6 +4,7 @@
 @import "./main/fonts";
 @import "./main/global";
 
+@import 'root';
 @import 'social';
 @import 'header';
 @import 'rubrics';
@@ -14,3 +15,6 @@
 @import 'burger';
 @import 'footer';
 @import 'modal';
+@import 'topics';
+@import 'topnews';
+
