added day's news block

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -272,7 +272,7 @@
 		right: 0;
 		width: 100%;
 		max-width: 270px;
-		height: 100vh;
+		height: 100%;
 
 		background-color: #f9f9f9;
 		@media(max-width: 1535px) {
