--- a/#src/scss/main-nav.scss
+++ b/#src/scss/main-nav.scss
@@ -5,6 +5,7 @@
     position: absolute;
     top: -100%;
     left: 0;
+    z-index: 999;
     display: none;
     width: 100%;
    
@@ -114,5 +115,3 @@
         
     }
 }
-
-
