--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./main/reset";
 @import "./main/fonts";
 @import "./main/global";
+@import "./main/forms";
 
 @import 'root';
 @import 'social';
@@ -18,4 +19,5 @@
 @import 'topics';
 @import 'topnews';
 @import 'daynews';
+@import 'big-post';
 
