--- a/#src/scss/daynews.scss
+++ b/#src/scss/daynews.scss
@@ -1,8 +1,8 @@
 /*----------------------------------------------------------------
-    Day's News, Time block and Button
+    Day's News
 ----------------------------------------------------------------*/
 .day-news {
-    grid-row: span 5;
+    grid-row: span 50;
     padding-bottom: var(--m-padding);
     text-align: center;
     margin-right: -1px;
@@ -14,12 +14,12 @@
         margin: 0;
         padding: 15px var(--m-padding);
 
-        text-align-last: left;
+        text-align: left;
         border-bottom: 1px solid #dcdcdc;
     }
     // .day-news__list
     &__list {
-        margin: 0;
+        margin: 0 0 35px;
         padding: 15px var(--m-padding) 35px;
         list-style: none;
         text-align: left;
@@ -27,6 +27,9 @@
     // .day-news__row
     &__row {
         margin-bottom: 25px;
+        &:last-child {
+            margin: 0;
+        }
     }
     // .day-news__lk
     &__lk {
@@ -37,73 +40,8 @@
         font-weight: 500;
         @include hover;
     }
-    // .day-news__footer
-    &__footer {}
-    // .day-news__rubric
-    &__rubric {
-        display: inline-block;
-        margin-right: 5px;
-        @include hover($text: #000, $line: underline);
-    }
-    // .day-news__time
-    &__time {
-    }
-    &__time,
-    &__rubric {
-        color: #636363;
-        font-size: 12px;
-    }
     // .day-news__btn
     &__btn {
         margin: 0 auto;
     }
-}
-
-
-/* Time
----------------------------------------------------------------*/
-.time {
-    display: inline-block;
-    padding-left: 18px;
-
-    background: url('../img/icons/ico_clock.png') left center  no-repeat;
-}
-
-
-/* Button
----------------------------------------------------------------*/
-.btn {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 45px;
-    padding: 0 50px;
-
-    color: #333;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 14px;
-    line-height: 1.2;
-    font-weight: 700;
-    text-transform: uppercase;
-
-    border: none;
-    border-radius: 30px;
-    outline: none;
-    cursor: pointer;
-    background-color: #fff;
-    transition: all .3s;
-    @media(min-width: 768px) {
-        &:hover,
-        &:focus {
-            box-shadow: 0 0 10px #999;
-        }  
-    }
-}
-
-.b-post {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    height: 100%;
-    background-color: #ccc;
 }
