--- a/#src/scss/topnews.scss
+++ b/#src/scss/topnews.scss
@@ -3,6 +3,7 @@
 ----------------------------------------------------------------*/
 .top-news {
     padding: 0 var(--m-padding) 0;
+    border-bottom: 1px solid #dcdcdc;
     // .top-news__list
     &__list {
         margin: 0;
@@ -52,7 +53,6 @@
 
             background: rgb(255,255,255);
             background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%);
-            transition: opacity .3s;
         }
     }
     // .top-news__img
