--- a/#src/scss/daynews.scss
+++ b/#src/scss/daynews.scss
@@ -2,11 +2,12 @@
     Day's News
 ----------------------------------------------------------------*/
 .day-news {
-    grid-row: span 50;
+    grid-row: span 20;
     padding-bottom: var(--m-padding);
-    text-align: center;
+    height: 100%;
     margin-right: -1px;
 
+    text-align: center;
     border-right: 1px solid #dcdcdc;
 	border-left: 1px solid #dcdcdc;
     // .day-news__title
@@ -16,6 +17,10 @@
 
         text-align: left;
         border-bottom: 1px solid #dcdcdc;
+    }
+    // .day-news__footer
+    &__footer {
+        color: #636363;
     }
     // .day-news__list
     &__list {
