--- a/#src/scss/topnews.scss
+++ b/#src/scss/topnews.scss
@@ -4,6 +4,7 @@
 .top-news {
     padding: 0 var(--m-padding) 0;
     border-bottom: 1px solid #dcdcdc;
+    border-right: 1px solid #dcdcdc;
     // .top-news__list
     &__list {
         margin: 0;
@@ -54,9 +55,6 @@
             background: rgb(255,255,255);
             background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%);
         }
-    }
-    // .top-news__img
-    &__img {
     }
     // .top-news__lk
     &__lk {
