--- a/#src/scss/big-post.scss
+++ b/#src/scss/big-post.scss
@@ -2,8 +2,7 @@
     Big Post
 ----------------------------------------------------------------*/
 .big-post {
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-area: big-post;
     height: 100%;
 
     display: flex;
