--- a/#src/scss/daynews.scss
+++ b/#src/scss/daynews.scss
@@ -2,7 +2,7 @@
     Day's News
 ----------------------------------------------------------------*/
 .day-news {
-    grid-row: span 20;
+    grid-area: day-news;
     padding-bottom: var(--m-padding);
     height: 100%;
     margin-right: -1px;
@@ -31,7 +31,7 @@
     }
     // .day-news__row
     &__row {
-        margin-bottom: 25px;
+        margin-bottom: 20px;
         &:last-child {
             margin: 0;
         }
