--- a/#src/scss/topnews.scss
+++ b/#src/scss/topnews.scss
@@ -2,14 +2,26 @@
     Top News
 ----------------------------------------------------------------*/
 .top-news {
+    grid-area: top-news;
     padding: 0 var(--m-padding) 0;
     border-bottom: 1px solid #dcdcdc;
     border-right: 1px solid #dcdcdc;
+    @media(max-width: 1240px) {
+        display: none;
+    }
     // .top-news__list
     &__list {
         margin: 0;
         padding: 0 0 15px;
         list-style: none;
+        &--wrapp {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            box-sizing: content-box;
+        }
     }
     // .top-news__row
     &__row {
@@ -28,6 +40,19 @@
             padding-bottom: var(--m-padding);
 
             text-align: center;
+        }
+        &--slide { 
+            flex-shrink: 0; 
+            text-align: center;
+            .top-news__lk {
+                margin: 0;
+                color: #fff;
+                font-size: 18px;
+                font-weight: 400;
+                &:hover {
+                    color: #fff;
+                }
+            }
         }
     }
     // .top-news__title
@@ -73,6 +98,36 @@
                 color: #fff;
                 text-decoration: underline;
             }
+        }
+    }
+    &--slider { 
+        display: none;
+        overflow: hidden;
+        border: none;
+        @media(max-width: 1050px) {
+            display: block;
+        }
+    }
+    // .top-news__pagination
+    &__pagination {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+
+        transform: translate(-50%, 0);
+        text-align: center;
+        .swiper-pagination-bullet {
+            display: inline-block;
+            margin-right: 5px;
+            width: 27px;
+            height: 4px;
+            background-color: rgba(#fff, .5);
+            &:last-child {
+                margin: 0;
+            }
+        }
+        .swiper-pagination-bullet-active {
+            background-color: #fff;
         }
     }
 }
